# helios-mission-control

./: .gitignore  .gitmodules  Dockerfile  MISSION_CONTROL_PLAN.md  Makefile  README.md  config.json  entrypoint.sh  go2rtc.yaml  mission_config.json  pyproject.toml
assets/: expected_profile.csv
docs/: OTHER_REPO_PRS.md  telemetry-schema.md
frontend/: admin.html  overlay.html  package-lock.json  package.json  stale_test.mjs  themecheck.mjs  tsconfig.json  vite.config.ts
frontend/src/admin/: App.tsx  CommandConsole.tsx  PacketPanel.tsx  admin.css  main.tsx
frontend/src/components/: AltitudeChart.tsx  AudioToggle.tsx  EventTicker.tsx  GpsMap.tsx  Panel.tsx  PlotLegend.tsx  Rocket3D.tsx  SignalDot.tsx  StatTile.tsx  StateBadge.tsx  ThemeToggle.tsx
frontend/src/lib/: api.ts  audio.ts  colors.ts  eventmeta.ts  fallback.ts  flightmeta.ts  store.ts  telemetry.ts  theme.ts  units.ts  whep.ts
frontend/src/overlay/: App.tsx  VideoPanel.tsx  main.tsx  overlay.css
frontend/src/styles/: base.css
protos-proposed/: ground_command.proto  landing_prediction.proto  uplink_packet.options
sim/: command_stub.py  replay.py
src/: __init__.py  commands.py  constants.py  flight_model.py  helios_bridge.py  hub.py  main.py  packet_log.py  standalone.py  state.py  telemetry.py  tiles.py
src/api/: rest.py  ws.py
tests/: test_state.py  test_tiles.py
